# kube-sentinel

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  terminal_chat_backend.milestones.md  terminal_chat_tui.plan.md  typer_trial.py
.aiassistant/rules/: main.md
app/: config.py
app/schemas/: chat.py
app/utils/: logger.py
manifests/: my-app.yml
scripts/: m1_manual_validation.py
src/: main.py
src/agent/: errors.py
src/kube_sentinel/: main.py  repl.py
src/kube_sentinel/agent/: chat_service.py  graph.py  llm.py  nodes.py  repl.py
src/kube_sentinel/cli/: widgets.py
src/kube_sentinel/domain/: schemas.py
src/kube_sentinel/k8s/: client.py  tools.py
src/kube_sentinel/schemas/: chat.py
src/kube_sentinel/tests/: test_chat_service.py  test_chat_service_cases.md
src/schemas/: __init__.py
src/utils/: logger.py
