[project]
name = "kube-sentinel"
version = "0.1.0"
description = "An AI-powered SRE agent for Kubernetes incident remediation."
authors = [
  { name = "Bedirhan Gilgiler a.k.a MrBabylonian", email = "bedirhangilgiler@gmail.com" },
]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
  "kubernetes-asyncio>=33.3.0",
  "langchain-google-genai>=4.1.3",
  "langchain-openai>=1.1.6",
  "langgraph>=1.0.5",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "rich>=14.2.0",
  "structlog>=25.5.0",
  "typed>=0.6",
  "uvloop>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.target.wheels]
packages = ["src/kube_sentinel"]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.pyright]
pythonVersion = "3.12"
reportUnknownMemberType = false

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort (imports)
  "B",   # flake8-bugbear (finds likely bugs)
  "UP",  # pyupgrade (enforces modern Python 3.12 syntax)
  "SIM", # flake8-simplify (code quality)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true


[dependency-groups]
dev = ["kubernetes-typed>=18.20.2", "mypy>=1.19.1", "ruff>=0.14.10"]
