[project]
name = "kube-sentinel"
version = "0.1.0"
description = "An AI-powered SRE agent for Kubernetes incident remediation."
authors = [
  { name = "Bedirhan Gilgiler a.k.a MrBabylonian", email = "bedirhangilgiler@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "asyncpg>=0.31.0",
  "kubernetes-asyncio>=33.3.0",
  "langchain-google-genai>=4.1.3",
  "langgraph>=1.0.5",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "structlog>=25.5.0",
  "uvloop>=0.22.1",
  "yoyo-migrations>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py314"
line-length = 79

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort (imports)
  "B",   # flake8-bugbear (finds likely bugs)
  "UP",  # pyupgrade (enforces modern Python 3.14 syntax)
  "SIM", # flake8-simplify (code quality)
]

[tool.ty]

# Intentionally left empty; using pyrefly's default configuration.
[dependency-groups]
dev = [
  "kubernetes-typed>=18.20.2",
  "ruff>=0.14.10",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "asyncpg-stubs>=0.31.2",
  "ty>=0.0.23",
  "better-exceptions>=0.3.3",
]
